traces/bug_37.txt
src/medit/util.c:39: error: DEAD_STORE
  The value written to &font_style (type void*) is never used.
Showing all 1 steps of the trace


src/medit/util.c:39:5: Write of unused value
37.     */
38.     else if (strcmp(name, "9x15") == 0)
39.       font_style = GLUT_BITMAP_9_BY_15;
          ^
40.   }
41.   
